fix(mock-client): derive the RPC connect budget, and report a dead adapter
Addresses review on #336. The three blocking items were all regressions
to the adapter-alone check #279's AC3 protects.

The connect budget was 20 attempts at 250 ms — 4.75 s — and this PR makes
a failed attach fatal, so an ordinary cold `java -jar` on a loaded runner
got its adapter terminated at 5 s while ice-smoke against the same
adapter passed. Its javadoc cited subprocess-orchestration-spec §2.7 for
"the 5 s window downlords-faf-client allows"; that file says 200 ms x 100
attempts <= 20 s and carries an explicit correction retracting the 2.5 s
figure as verified false, with upstream at 50 x 250 ms. The citation is
dropped rather than repaired.

The window is now derived from --duration-seconds, capped at 20 s, the
way ice-smoke derives its own from --timeout-seconds — attaching cannot
sensibly take longer than the adapter is asked to live for. The bounding
get() rises with it, or raising the budget would have been inert. That
also makes the budget reachable from a flag, which takes
anAdapterWithNoRpcPortExitsRuntime from 5.15 s to 1.02 s instead of
pushing it toward the class's 30 s timeout.

An adapter that started and then died was reported as an RPC-port
problem with its exit code discarded, pointing the operator at the wrong
subsystem; the accurate message further down was unreachable in that
window. The connect-failure path now asks adapter.isAlive() first and
reports "exited on its own ... exit code N", the same shape
IceReachabilityCheck uses. Note the report is correct but not yet early:
the liveness check runs after the retry budget is spent, and racing the
connect against the adapter's own exit is #341.

Teardown had no coverage, which was the other half of #279's deliverable.
thePeerIsClosedBeforeTheAdapterIsTerminated observes EOF on the stub's
accepted socket — that happens exactly when the command closes its peer —
and asserts it precedes the terminate log line, pinning th